[gd_scene load_steps=5 format=3 uid="uid://18btduu4xcao"]

[ext_resource type="Script" path="res://Scripts/slots_game.gd" id="1_vdhey"]
[ext_resource type="PackedScene" uid="uid://dl20ptmkwt040" path="res://Scenes/slot.tscn" id="2_arwdp"]
[ext_resource type="Texture2D" uid="uid://udu8c42r8lj" path="res://Assets/random_photos/Slots_Machine.png" id="2_cfer3"]
[ext_resource type="Texture2D" uid="uid://cjd3ff31vy68i" path="res://Assets/random_photos/seven.png" id="3_uf1h0"]

[node name="Slots_Game" type="Node2D"]
script = ExtResource("1_vdhey")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 354.0
offset_top = 222.0
offset_right = 778.0
offset_bottom = 488.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -15.0
anchor_top = -5.467
anchor_right = 17.917
anchor_bottom = 6.4
offset_left = 6356.0
offset_top = 1454.22
offset_right = -7189.81
offset_bottom = -1517.4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Results" type="Node" parent="Control/Panel/HBoxContainer"]

[node name="Slot_pic" type="Sprite2D" parent="Control/Panel/HBoxContainer/Results"]
visible = false
position = Vector2(417, 306.998)
texture = ExtResource("3_uf1h0")

[node name="Slot2_pic" type="Sprite2D" parent="Control/Panel/HBoxContainer/Results"]
visible = false
position = Vector2(558, 306.998)
texture = ExtResource("3_uf1h0")

[node name="Slot3_pic" type="Sprite2D" parent="Control/Panel/HBoxContainer/Results"]
visible = false
position = Vector2(694, 306.998)
texture = ExtResource("3_uf1h0")

[node name="Animation" type="Node" parent="Control/Panel/HBoxContainer"]

[node name="Slot" parent="Control/Panel/HBoxContainer/Animation" instance=ExtResource("2_arwdp")]
position = Vector2(417, 306.998)

[node name="Slot2" parent="Control/Panel/HBoxContainer/Animation" instance=ExtResource("2_arwdp")]
position = Vector2(558, 306.998)

[node name="Slot3" parent="Control/Panel/HBoxContainer/Animation" instance=ExtResource("2_arwdp")]
position = Vector2(694, 306.998)

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 59.0
offset_top = 220.0
offset_right = 340.0
offset_bottom = 272.0
text = "Play Again"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(571, 311)
scale = Vector2(1.38262, 1.17088)
texture = ExtResource("2_cfer3")

[connection signal="pressed" from="Control/Button" to="." method="_on_Replay_pressed"]
